dont use timecontrol inside k2tree scanner + fix error response

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -490,7 +490,7 @@ add_executable(k2tree_example example/k2tree_example.cpp)
 target_link_libraries(k2tree_example ${BASE_LIBS})
 
 
-add_executable(count_nt_predicates scripts/count_nt_predicates)
+add_executable(count_nt_predicates scripts/count_nt_predicates.cpp)
 target_link_libraries(count_nt_predicates ${PROC_LIBS} ntparser)
 
 
